practice-exam-tracker-sfdx/force-app/main/default/objects/Batch__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Should return the Friday 10 weeks after the start date.</description>
    <formula>(Start_Date__c + 7*( Length__c )) + ( 5 - MOD( (Start_Date__c + 7*( Length__c )) - DATE( 1900, 1, 7 ), 7 ) )
+
IF( 
  MOD( (Start_Date__c + 7*( Length__c )) - DATE( 1900, 1, 7 ), 7 ) &gt;= 5,
  7,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>