practice-exam-tracker-sfdx/force-app/main/default/objects/Batch__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <description>Number of weeks that the training will run.</description>
    <label>Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>