practice-exam-tracker-sfdx/force-app/main/default/objects/Batch__c/fields/Number_PD1_Certified__c.field-meta.xml
<CustomField>
    <fullName>Number_PD1_Certified__c</fullName>
    <label>Number PD1 Certified</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>