practice-exam-tracker-sfdx/force-app/main/default/objects/Batch__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Batches</relationshipName>
    <type>Lookup</type>
</CustomField>